# staking-projeto-2.0

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260716_0001_identity_tenancy_core.py  20260717_0002_scope_enforcement_hardening.py  20260717_0003_canonical_data_platform.py  20260718_0004_analytics_semantic_layer.py  20260719_0005_diagnostics_rules_engine.py
apps/api/src/pharma_api/: main.py
apps/api/src/pharma_api/api/: dependencies.py
apps/api/src/pharma_api/api/v1/: analytics.py  audit_events.py  auth.py  branches.py  companies.py  economic_groups.py  health.py  integrations.py  invitations.py  me.py  memberships.py  onboarding.py  permissions.py  platform.py  roles.py  router.py  sessions.py  teams.py  tenants.py  users.py
apps/api/src/pharma_api/application/analytics/: __init__.py  processing.py  queries.py  scopes.py  service.py
apps/api/src/pharma_api/application/audit/: service.py
apps/api/src/pharma_api/application/auth/: authorization.py  context.py  profile.py  rate_limit.py  scope_filters.py  service.py  sessions.py  types.py
apps/api/src/pharma_api/application/email/: service.py
apps/api/src/pharma_api/application/health/: service.py
apps/api/src/pharma_api/application/integrations/: __init__.py  connectors.py  quality.py  service.py
apps/api/src/pharma_api/application/onboarding/: service.py
apps/api/src/pharma_api/application/organizations/: service.py
apps/api/src/pharma_api/application/rbac/: service.py
apps/api/src/pharma_api/cli/: bootstrap_admin.py  migrate.py
apps/api/src/pharma_api/core/: config.py  errors.py  logging.py  security.py
apps/api/src/pharma_api/domain/analytics/: __init__.py  kpis.py
apps/api/src/pharma_api/domain/diagnostics/: __init__.py  actions.py  conditions.py  correlation.py  correlation_contracts.py  correlation_policies.py  engine.py  engine_contracts.py
apps/api/src/pharma_api/domain/identity/: enums.py
apps/api/src/pharma_api/domain/integrations/: __init__.py  state_machine.py
apps/api/src/pharma_api/domain/rbac/: enums.py
apps/api/src/pharma_api/domain/tenancy/: enums.py
apps/api/src/pharma_api/infrastructure/: object_storage.py
apps/api/src/pharma_api/infrastructure/analytics/: __init__.py  (+1 more)
apps/api/src/pharma_api/middleware/: correlation_id.py
apps/api/src/pharma_api/schemas/: analytics.py  audit.py  auth.py  common.py  health.py  integrations.py  onboarding.py  organizations.py  platform.py  rbac.py  service.py
apps/api/tests/: conftest.py  test_analytics.py  test_application.py  test_audit_sanitization.py  test_auth_schemas.py  test_auth_service_security.py  test_authorization_scopes.py  test_compose_smoke_migration_heads.py  test_config.py  test_cookie_security.py  test_diagnostics_correlation.py  test_diagnostics_correlation_contracts.py  test_diagnostics_domain.py  test_diagnostics_engine.py  test_diagnostics_inventory_rules.py  test_diagnostics_margin_rules.py  test_diagnostics_migration.py  test_diagnostics_migration_postgres.py  test_diagnostics_models.py  test_diagnostics_operational_models.py  test_diagnostics_operations_rules.py  test_diagnostics_purchases_rules.py  test_diagnostics_rule_catalog.py  test_diagnostics_sales_rules.py  test_diagnostics_suppliers_rules.py  test_domain_enums.py  test_email_delivery.py  test_health.py  test_identity_support_services.py  test_integrations.py  test_login_rate_limit.py  test_migrate_cli.py  test_object_storage.py  test_permission_catalog.py  test_public_rate_limit.py  test_rate_limit_failures.py  test_rbac_query_efficiency.py  test_resources.py  test_security.py  test_session_services.py
apps/api/tests/integration/: conftest.py  test_api_cookies_csrf.py  test_auth_postgres_redis.py  test_context_rbac_sessions.py  test_phase2_vertical_flow.py  test_phase2b_pipeline.py  test_rls_isolation.py  test_scoped_authorization_matrix.py
apps/worker/: pyproject.toml
apps/worker/src/pharma_worker/: broker.py  tasks.py
apps/worker/tests/: test_tasks.py
(+186 files in other folders)
