[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pharma-api"
version = "0.1.1"
description = "Foundation API for the Pharma Intelligence SaaS"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "redis==8.0.1",
  "sqlalchemy==2.0.51",
  "structlog==26.1.0",
  "uvicorn[standard]==0.51.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.19.1",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "ruff==0.15.21"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["INP001"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["dramatiq.*"]
ignore_missing_imports = true
