[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pharma-api"
version = "0.2.0"
description = "Identity, tenancy and authorization API for the Pharma Intelligence SaaS"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.5",
  "argon2-cffi==25.1.0",
  "boto3==1.43.51",
  "dramatiq[redis]==2.2.0",
  "email-validator==2.3.0",
  "fastapi==0.139.2",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "python-multipart==0.0.32",
  "redis==8.0.1",
  "sqlalchemy==2.0.51",
  "structlog==26.1.0",
  "uvicorn[standard]==0.51.0"
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.19.1",
  "pip-audit==2.10.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.0.0",
  "ruff==0.15.21"
]

[project.scripts]
pharma-bootstrap-admin = "pharma_api.cli.bootstrap_admin:main"
pharma-migrate = "pharma_api.cli.migrate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_api"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: requires real PostgreSQL and Redis",
  "negative_security: mandatory negative tenancy and session security matrix",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["INP001", "E501", "S608"]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*", "dramatiq.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
