[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pharma-worker"
version = "0.2.0"
description = "Dramatiq worker for identity e-mails and operational jobs"
requires-python = ">=3.12"
dependencies = [
  "dramatiq[redis]==2.2.0",
  "pharma-api==0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.21",
  "mypy==2.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_worker"]
